<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tLastMatch"
        android:text="@string/last_match"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/iYesterdya"
        android:text="@string/yesterday"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:id="@+id/separate"
        android:layout_below="@+id/layout_list"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_separate"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:text="@string/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>